add husky and ts-prune

--- a/package.json
+++ b/package.json
@@ -1,60 +1,64 @@
 {
-  "name": "cleanslate13",
-  "version": "0.1.0",
-  "private": true,
-  "author": "@codingpancakes",
-  "license": "MIT",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint &&  npx tsc --noEmit",
-    "prettier": "prettier --write --ignore-unknown .",
-    "prettier:check": "prettier --check --ignore-unknown .",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build "
-  },
-  "dependencies": {
-    "classnames": "^2.3.2",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "superjson": "^1.12.3",
-    "tailwindcss": "3.3.2",
-    "zod": "^3.21.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/blocks": "^7.0.18",
-    "@storybook/nextjs": "^7.0.18",
-    "@storybook/react": "^7.0.18",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/eslint": "^8.40.0",
-    "@types/node": "20.2.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "autoprefixer": "10.4.14",
-    "csstype": "^3.1.2",
-    "encoding": "^0.1.13",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "eslint-plugin-storybook": "^0.6.12",
-    "postcss": "8.4.24",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "pretty-quick": "^3.1.3",
-    "storybook": "^7.0.18",
-    "typescript": "5.0.4",
-    "webpack": "^5.84.1"
-  }
+	"name": "cleanslate13",
+	"version": "0.1.0",
+	"private": true,
+	"author": "@codingpancakes",
+	"license": "MIT",
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint &&  npx tsc --noEmit",
+		"prettier": "prettier --write --ignore-unknown .",
+		"prettier:check": "prettier --check --ignore-unknown .",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build "
+	},
+	"dependencies": {
+		"classnames": "^2.3.2",
+		"next": "13.4.4",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"server-only": "^0.0.1",
+		"superjson": "^1.12.3",
+		"tailwindcss": "3.3.2",
+		"zod": "^3.21.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.22.1",
+		"@storybook/addon-essentials": "^7.0.18",
+		"@storybook/addon-interactions": "^7.0.18",
+		"@storybook/addon-links": "^7.0.18",
+		"@storybook/blocks": "^7.0.18",
+		"@storybook/nextjs": "^7.0.18",
+		"@storybook/react": "^7.0.18",
+		"@storybook/testing-library": "^0.0.14-next.2",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/line-clamp": "^0.4.4",
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/eslint": "^8.40.0",
+		"@types/node": "20.2.5",
+		"@types/prettier": "^2.7.2",
+		"@types/react": "18.2.7",
+		"@types/react-dom": "18.2.4",
+		"@typescript-eslint/eslint-plugin": "^5.59.8",
+		"@typescript-eslint/parser": "^5.59.8",
+		"autoprefixer": "10.4.14",
+		"cspell": "^6.31.1",
+		"csstype": "^3.1.2",
+		"encoding": "^0.1.13",
+		"eslint": "8.41.0",
+		"eslint-config-next": "13.4.4",
+		"eslint-plugin-storybook": "^0.6.12",
+		"husky": "^8.0.3",
+		"postcss": "8.4.24",
+		"prettier": "^2.8.8",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"pretty-quick": "^3.1.3",
+		"storybook": "^7.0.18",
+		"ts-prune": "^0.10.3",
+		"tsx": "^3.12.7",
+		"typescript": "5.0.4",
+		"webpack": "^5.84.1"
+	}
 }
