--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noImplicitAny": true,
+		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"plugins": [
 			{
