--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.1",
-		"@storybook/addon-essentials": "^7.0.18",
-		"@storybook/addon-interactions": "^7.0.18",
-		"@storybook/addon-links": "^7.0.18",
-		"@storybook/blocks": "^7.0.18",
-		"@storybook/nextjs": "^7.0.18",
-		"@storybook/react": "^7.0.18",
-		"@storybook/testing-library": "^0.0.14-next.2",
+		"@storybook/addon-essentials": "^7.0.20",
+		"@storybook/addon-interactions": "^7.0.20",
+		"@storybook/addon-links": "^7.0.20",
+		"@storybook/blocks": "^7.0.20",
+		"@storybook/nextjs": "^7.0.20",
+		"@storybook/react": "^7.0.20",
+		"@storybook/testing-library": "^0.1.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.9",
@@ -67,10 +67,10 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"pretty-quick": "^3.1.3",
-		"storybook": "^7.0.18",
+		"storybook": "^7.0.20",
 		"ts-prune": "^0.10.3",
 		"tsx": "^3.12.7",
-		"typescript": "5.0.4",
+		"typescript": "^5.1.3",
 		"webpack": "^5.84.1"
 	}
 }
