--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
 		"prepare": "husky install",
 		"format": "prettier --write --ignore-unknown .",
 		"format:check": "prettier --check --ignore-unknown .",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build "
+		"storybook": "storybook dev -p 6006 -s ./public",
+		"build-storybook": "storybook build   -s public"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.0.2",
+		"class-variance-authority": "^0.6.0",
 		"classnames": "^2.3.2",
+		"clsx": "^1.2.1",
+		"lucide-react": "^0.241.0",
 		"next": "13.4.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"server-only": "^0.0.1",
 		"superjson": "^1.12.3",
+		"tailwind-merge": "^1.13.1",
 		"tailwindcss": "3.3.2",
+		"tailwindcss-animate": "^1.0.6",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
