--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"classnames": "^2.3.2",
 		"clsx": "^1.2.1",
 		"lucide-react": "^0.241.0",
-		"next": "13.4.4",
+		"next": "^13.4.7",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"server-only": "^0.0.1",
@@ -53,18 +53,18 @@
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/eslint": "^8.40.0",
-		"@types/node": "20.2.5",
+		"@types/node": "20.3.1",
 		"@types/prettier": "^2.7.2",
-		"@types/react": "18.2.7",
-		"@types/react-dom": "18.2.4",
-		"@typescript-eslint/eslint-plugin": "^5.59.11",
-		"@typescript-eslint/parser": "^5.59.11",
+		"@types/react": "18.2.14",
+		"@types/react-dom": "18.2.6",
+		"@typescript-eslint/eslint-plugin": "^5.60.0",
+		"@typescript-eslint/parser": "^5.60.0",
 		"autoprefixer": "10.4.14",
 		"cspell": "^6.31.1",
 		"csstype": "^3.1.2",
 		"encoding": "^0.1.13",
-		"eslint": "8.41.0",
-		"eslint-config-next": "13.4.4",
+		"eslint": "8.43.0",
+		"eslint-config-next": "13.4.7",
 		"eslint-plugin-storybook": "^0.6.12",
 		"husky": "^8.0.3",
 		"jsonc-eslint-parser": "^2.3.0",
