add drizzle base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
 			"@/components/*": ["./src/components/*"],
 			"@/sections/*": ["./src/sections/*"],
 			"@/lib/*": ["./src/lib/*"],
-			"@/types/*": ["./src/types/*"]
+			"@/types/*": ["./src/types/*"],
+			"@/db/*": ["./src/db/*"]
 		}
 	},
 	"include": [
