--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.0.2",
+		"@t3-oss/env-nextjs": "^0.4.1",
 		"class-variance-authority": "^0.6.0",
 		"classnames": "^2.3.2",
 		"clsx": "^1.2.1",
+		"drizzle-orm": "^0.27.0",
 		"lucide-react": "^0.241.0",
 		"next": "^13.4.7",
+		"pg": "^8.11.0",
+		"postgres": "^3.3.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"server-only": "^0.0.1",
@@ -54,6 +58,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/eslint": "^8.40.0",
 		"@types/node": "20.3.1",
+		"@types/pg": "^8.10.2",
 		"@types/prettier": "^2.7.2",
 		"@types/react": "18.2.14",
 		"@types/react-dom": "18.2.6",
@@ -62,6 +67,8 @@
 		"autoprefixer": "10.4.14",
 		"cspell": "^6.31.1",
 		"csstype": "^3.1.2",
+		"dotenv": "^16.3.1",
+		"drizzle-kit": "^0.19.2",
 		"encoding": "^0.1.13",
 		"eslint": "8.43.0",
 		"eslint-config-next": "13.4.7",
