--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ STRIPE_WEBHOOK_SECRET="whsec_"
 # Stripe Product and Price IDs for your created products 
 # found at https://dashboard.stripe.com/test/products
 STRIPE_PRO_STORE_PRICE_ID="price_"
+
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
