--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.0.2",
+		"@supabase/auth-helpers-nextjs": "^0.7.2",
+		"@supabase/auth-ui-react": "^0.4.2",
+		"@supabase/auth-ui-shared": "^0.1.6",
+		"@supabase/supabase-js": "^2.26.0",
 		"@t3-oss/env-nextjs": "^0.4.1",
 		"class-variance-authority": "^0.6.0",
 		"classnames": "^2.3.2",
